examples/style/widget-gallery.css
div.widget-gallery {
	width: 100%;
	height: 100%;

	gap: 1em;

	direction: row;
	justify-content: center;
	align-items: center;
}

div.popup {
	align-items: stretch;
}

div.row {
	gap: 10px;

	direction: row;
	justify-content: space-between; 
	align-items: center;
}

div.column {
	gap: 5px;

	direction: column;
	justify-content: center;
	align-items: stretch;
}

image {
	max-height: 6em;
}

text-input {
	font-size: 1.2em;
}

text-input.long-text {
	font-size: 0.8em;
	text-wrap: word;
	text-align: start;
	text-valign: start;

	border-width: none;
}

button text {
	text-align: center;
}

.radio {
	text-valign: start;
}

